test/octave.test/error/usage-1.m
function g () usage ("foo"); endfunction
function f () g (); endfunction
f ();
